// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders correctly with height set 1`] = `
<blaze-panel
  class="hydrated"
  height="350"
>
  default
  <div
    class="o-panel-container"
    style="height: 350px;"
  >
    <div
      class="o-panel"
    />
  </div>
</blaze-panel>
`;

exports[`Panel renders correctly with no props 1`] = `
<blaze-panel
  class="hydrated"
>
  default
  <div
    class="o-panel-container"
    style="height: 0px;"
  >
    <div
      class="o-panel"
    />
  </div>
</blaze-panel>
`;
